# FiscalBay

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CHECKLIST.md  CONTEXT.md  Dockerfile  Makefile  PROJECT_CONTEXT.md  README.md  RUNBOOK.md  SECURITY.md  docker-compose.yml  pyproject.toml  release-please-config.json  setup.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  maintenance_task.yml
.github/scripts/: handle-codex-pr-comments.mjs
.github/workflows/: actionlint.yml  auto-merge-release-pr.yml  ci.yml  codeql.yml  codex-pr-comments.yml  configure-public-access.yml  dependabot-auto-merge.yml  dependency-review.yml  deploy-vps.yml  package-build.yml  pr-title.yml  release-please.yml  release.yml  vps-diagnostic-orders-simple.yml  vps-diagnostic-orders.yml  vps-read-telegram-allowed-ids.yml
data/: state.db
deploy/: alert-check.sh  autodeploy.sh  backup.sh  check-secrets-perms.sh  deploy.sh  duckdns-update.sh  ebay-cf.service  ebaycf-alertcheck.service  ebaycf-alertcheck.timer  ebaycf-backup.service  ebaycf-backup.timer  ebaycf-bot.service  ebaycf-oauth.service  ebaycf-reconcile.service  ebaycf-reconcile.timer  external-healthcheck.sh  fiscalbay-alertcheck.service  fiscalbay-alertcheck.timer  fiscalbay-autodeploy.service  fiscalbay-autodeploy.timer  fiscalbay-backup.service  fiscalbay-backup.timer  fiscalbay-bot.service  fiscalbay-dnf-automatic.conf  fiscalbay-duckdns.service  fiscalbay-duckdns.timer  fiscalbay-external-healthcheck.service  fiscalbay-external-healthcheck.timer  fiscalbay-log-maintenance.service  fiscalbay-log-maintenance.timer  fiscalbay-oauth.service  fiscalbay-reconcile.service  fiscalbay-reconcile.timer  fiscalbay-release-please.service  fiscalbay-release-please.timer  fiscalbay-restore-drill.service  fiscalbay-restore-drill.timer  github-release-pr.py  install-auto-updates.sh  install-vps.sh  (+13 more)
deploy/systemd/: ebaycf-bot.service
docs/: ARCHITECTURE.md  BACKLOG.md  BRAND_GUIDELINES.md  CHANGELOG.md  CHANGELOG_ARCHIVE.md  CHECKLIST.md  CODEX_CLOUD_DEPLOY.md  CODE_CLEANUP_PROPOSALS.md  CONTEXT.md  DATA_MODEL.md  DECISIONS.md  DECISIONS_PENDING.md  DEPLOY_LINUX.md  DEPLOY_ORACLE.md  GITHUB_MAINTENANCE.md  INDEX.md  MILESTONE_BOARD.md  OAUTH_FLOW.md  OPERATIONS.md  PHASE0_BASELINE.md  PUBLIC_ACCESS.md  RELEASE_POLICY.md  RELEASE_READINESS.md  ROADMAP.md  RUNBOOK.md  SECURITY.md  SECURITY_HARDENING.md  SECURITY_OPERATIONS.md  SERVICE_GOVERNANCE.md  TECHNICAL_GUARDRAILS.md  TOOLCHAIN.md  doppler-setup.md
docs/adr/: 0001-modularize-telegram-runtime.md  0002-introdurre-modelli-tipizzati-per-stato-runtime.md  0003-centralizzare-retry-e-classificazione-errori.md
docs/decisions/: README.md
scripts/: check_github_workflows.sh  ci_verify.sh  deploy_now.sh  local_automate.sh  local_deploy_vps.sh  release_now.sh
src/: ebay_cf_tool.py  telegram_bot.py
src/ebay_cf/: __init__.py  application.py  bot.py  bot_messaging.py  cli.py  config.py  errors.py  git_utils.py  healthcheck.py  logging_utils.py  models.py  oauth_server.py  reconcile.py  retry.py  telegram_commands.py  tenant_credentials.py
src/ebay_cf/clients/: ebay.py  telegram.py
src/ebay_cf/services/: notifications.py  orders.py  telegram_runtime.py
src/ebay_cf/storage/: schema.py  sqlite.py
src/fiscalbay/: __init__.py  application.py  bot.py  bot_authz.py  bot_compat.py  bot_messaging.py  bot_oauth.py  bot_process_lock.py  cli.py  config.py  fiscal_export.py  git_utils.py  healthcheck.py  models.py  oauth_server.py  reconcile.py  release_info.py  retry.py  scale_readiness.py  security_ops.py  support_snapshot.py  telegram_commands.py  tenant_credentials.py
src/fiscalbay/clients/: ebay.py  telegram.py  trading.py
src/fiscalbay/services/: notifications.py  orders.py  telegram_runtime.py
src/fiscalbay/storage/: repositories.py  schema.py  sqlite.py
tests/: test_api_clients.py  test_application.py  test_bot_integration.py  test_cli.py  test_config.py  test_ebay_cf_tool.py  test_fiscal_export.py  test_fiscalbay.py  test_git_utils.py  test_healthcheck.py  test_logging_utils.py  test_models.py  test_notifications.py  test_oauth_handler.py  test_oauth_server.py  test_reconcile.py  test_release_automation.py  test_release_info.py  test_retry.py  test_scale_readiness.py  test_security_ops.py  test_storage_repositories.py  test_storage_sqlite.py  test_support_snapshot.py  test_telegram_bot.py  test_telegram_runtime.py  test_tenant_credentials.py  test_trading_client.py
