[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ebay-cf-tool"
version = "0.2.0"
description = "CLI e bot Telegram per leggere codici fiscali dagli ordini eBay (API ufficiali)."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "eBay CF Tool" }]
dependencies = [
  "cryptography>=45.0.0",
]

[project.scripts]
ebay-cf = "ebay_cf.cli:main"
ebay-telegram-bot = "ebay_cf.bot:run_bot"
ebay-cf-oauth-server = "ebay_cf.oauth_server:main"
ebay-cf-fix-git-lock = "ebay_cf.git_utils:main"
ebay-cf-git-safe = "ebay_cf.git_utils:safe_git_main"
ebay-cf-healthcheck = "ebay_cf.healthcheck:main"
ebay-cf-reconcile = "ebay_cf.reconcile:main"

[project.optional-dependencies]
dev = [
  "build>=1.2.2",
  "coverage>=7.10.7",
  "mypy>=1.18.2",
  "ruff==0.15.9",
]

[tool.setuptools.package-dir]
"" = "src"


[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
]

[tool.mypy]
python_version = "3.10"
files = [
  "src/ebay_cf/models.py",
  "src/ebay_cf/config.py",
  "src/ebay_cf/storage/sqlite.py",
  "src/ebay_cf/git_utils.py",
  "src/ebay_cf/logging_utils.py",
  "src/ebay_cf/healthcheck.py",
]
strict = true

[tool.coverage.run]
source = ["src/ebay_cf"]

[tool.coverage.report]
fail_under = 64
show_missing = true
