[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "fiscalbay"
version = "1.1.1"
description = "CLI e bot Telegram per leggere identificativi fiscali dagli ordini eBay (API ufficiali)."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "FiscalBay" }]
dependencies = [
  "cryptography>=45.0.0",
]

[project.scripts]
fiscalbay = "fiscalbay.cli:main"
fiscalbay-bot = "fiscalbay.bot:run_bot"
fiscalbay-oauth-server = "fiscalbay.oauth_server:main"
fiscalbay-fix-git-lock = "fiscalbay.git_utils:main"
fiscalbay-git-safe = "fiscalbay.git_utils:safe_git_main"
fiscalbay-healthcheck = "fiscalbay.healthcheck:main"
fiscalbay-reconcile = "fiscalbay.reconcile:main"

[project.optional-dependencies]
dev = [
  "build>=1.2.2",
  "coverage>=7.10.7",
  "mypy>=1.18.2",
  "ruff==0.15.9",
]

[tool.setuptools.package-dir]
"" = "src"


[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
]

[tool.mypy]
python_version = "3.10"
files = [
  "src/fiscalbay/models.py",
  "src/fiscalbay/config.py",
  "src/fiscalbay/bot_authz.py",
  "src/fiscalbay/bot_compat.py",
  "src/fiscalbay/bot_oauth.py",
  "src/fiscalbay/bot_process_lock.py",
  "src/fiscalbay/reconcile.py",
  "src/fiscalbay/storage/repositories.py",
  "src/fiscalbay/storage/schema.py",
  "src/fiscalbay/storage/sqlite.py",
  "src/fiscalbay/git_utils.py",
  "src/fiscalbay/release_info.py",
  "src/fiscalbay/logging_utils.py",
  "src/fiscalbay/healthcheck.py",
]
strict = true

[tool.coverage.run]
source = ["src/fiscalbay"]

[tool.coverage.report]
fail_under = 70
show_missing = true
